<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>udp_bridge_ros2_cpp</name>
  <version>0.1.0</version>
  <description>UDP bridge connection to Unitree Go1 leggedSDK and cameraSDK</description>
  <maintainer email="hab75@aber.ac.uk">hab75</maintainer>
  <license>AGPL-3.0 license</license>
  

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>stdmsgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
